--- a/Email/package.json
+++ b/Email/package.json
@@ -14,6 +14,7 @@
     "cookie-parser": "^1.4.6",
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
+    "express-session": "^1.18.0",
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^6.7.5",
     "nodemailer": "^6.9.14",
